# repo-to-agent

./: .pre-commit-config.yaml  main.py  pyproject.toml
src/repo_to_agent/: cli.py
